# fingers-checker

./: README.md  app.h  checker.cpp  checker.h  database.cpp  database.h  fingers.pro  log.cpp  main.cpp  printer.cpp
Statisctics/: Statisctics.pro  configs.cpp  database.cpp  main.cpp  mainwindow.cpp  qapp.cpp  qapp.h  stat.cfg  tcpclient.cpp
client/: .checker.cpp.swp  CMakeLists.txt  app.cpp  app.h  checker.cpp  checker.h  configs.cpp  configs.h  database.cpp  database.h  devicechecker.cpp  devicechecker.h  fingers.cfg  fingers.pro  helper.cpp  helper.h  ichecker.h  log.cpp  log.h  main.cpp  notify.cpp  notify.h  printclient.cpp  printclient.h  tcpclient.cpp  tcpclient.h  threadmanager.cpp  threadmanager.h
old/: app.cpp  checker.cpp  database.h  log.h  printer.h
print-server/: PrintServer.pro  app.cpp  app.h  configs.cpp  configs.h  log.cpp  log.h  main.cpp  printserver.cpp  printserver.h  setup1.iss  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
server/: CMakeLists.txt  app.cpp  app.h  checker.cpp  checker.h  fingers.pro  log.cpp  log.h  main.cpp
statistics/: Statistics.pro  app.cpp  app.h  configs.cpp  configs.h  database.cpp  database.h  helper.cpp  helper.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qapp.h  tcpclient.cpp  tcpclient.h
win-service/: main.cpp  service-install.bat
